# trident

./: .gitignore  AUTHORS  AUTOCONF_DETAILS  COPYING  Makefile.am  Makefile.in  checkin.sh  config.h  config.h.in  config.status  configure  configure.in  make_hadoop  trident-0.4.2.spec  unit_test.sh
RNAlib/: Makefile  Makefile.in  fold.c  intloops.h  utils.c
RNAlib/H/: Makefile  Makefile.in  pair_mat.h
VM/kickstart/: ks.cfg
VM/vagrant/: Vagrantfile  bootstrap.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: Doxyfile  generate_docs.sh  trident.rst
examples/: dnaA22.fasta  dnaC22.fasta  dnaG22.fasta  dnaT22.fasta  dnaU22.fasta  dna_segment.fasta  hsa-miR-483-5p.fasta  load_json_test.out.expected  load_json_test.py  mir1.fasta  mir1idealizedpurinestrand3to5.fasta  mir1idealizedpurinestrand5to3.fasta  mir1idealizedpyrimidinestrand3to5.fasta  mir1idealizedpyrimidinestrand5to3.fasta  mir98.fasta  mir98idealizedpurinestrand3to5.fasta  mir98idealizedpurinestrand5to3.fasta  mir98idealizedpyrimidinestrand3to5.fasta  mir98idealizedpyrimidinestrand5to3.fasta  mirA22.fasta  mirC22.fasta  mirG22.fasta  mirU22.fasta  t_mir98idealizedpyrimidinestrand3to5.fasta  test.json.expected  test.out  test_json.py
hadoop/: TridentGenericMapper.java  TridentMapper.java  TridentReducer.java  TridentScoreMR.java  build.xml  energy_score_combiner.py  energy_score_plots.m  energy_score_ranker.py
hadoop/TridentHadoop/: TridentException.java
hadoop/pig/: remove_duplicates.pig
hadoop/src/org/stjude/trident/hadoop/: TridentException.java  TridentGenericMapper.java  TridentMapper.java  TridentReducer.java  TridentScoreMR.java
man/: Makefile  Makefile.in
python/: requirements.txt  setup.py  trident.py.c
python/scripts/: chromosome_chopper  energy_score_classifier  energy_score_combiner  energy_score_interpolator  energy_score_mapper  energy_score_plots  energy_score_ranker  gene_extractor  interpolate  kmer_counter  mapper  mirna_chopper  regex_search  score-gene_counter  score-gene_distance  score_converter  validate_energies
python/test/: class_4.expected  class_5.expected  interpolator.sav  kmertest.fa  kmertest.out.expected  ranked.out.expected  score.out  score_count.1  score_count.2  score_count.3  score_count.4  score_count.raw  top_25-percent.dat.expected
python/trident/: __init__.py  chromosome_chopper.py  classify.py  mirna_chopper.py  parser.py  validate_energies.py
src/: ExpString.c  Makefile.am  Makefile.in  output.c  pairs.c  revision_string.c  scan.c  seqio.c  swat.c  thermo.c  trident.c  trident.h  utils.c  version.h
src/python/: setup.py  trident.py.c
src/python/scripts/: gene_extractor
src/python/trident/: __init__.py  chromosome_chopper.py  gene_extractor.py  parser.py
testcases/: example_result1.txt  example_result2.txt  example_result3.txt  example_result4.txt  example_result5.txt  python_test.py
