AC_PREREQ(2.60)
AC_INIT(Trident, 1.0.0, trident {at} stjude.org)
AC_CONFIG_SRCDIR([RNAlib])
AC_CONFIG_HEADER([config.h])
AC_SUBST(VERSION)
ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)
AM_INIT_AUTOMAKE
AC_CANONICAL_HOST

# Checks for programs.
AC_PROG_CC
AM_PROG_CC_C_O
if test "$GCC" = yes; then
   AC_DEFINE(UNUSED, __attribute__ ((unused)), avoid warning about unused variables)
else
   AC_DEFINE(UNUSED,, only for gcc)
fi
AC_PROG_INSTALL
AC_PROG_RANLIB

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [main])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([float.h limits.h stdlib.h string.h])
AH_TEMPLATE([USE_RUSAGE],[Define to report resource usage (On systems where available)])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_STDBOOL
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_STRTOD
AC_CHECK_FUNCS([memset sqrt strchr strdup strrchr strstr])

#static build?
AC_MSG_CHECKING([static build])
AC_ARG_ENABLE([static],
	[AS_HELP_STRING([--enable-static],[Enable building of trident statically. Default: disabled. To link against shared libraries, use --disable-static])],
	[enable_static="$enableval"],
	[enable_static=no])
AC_MSG_RESULT($enable_static)
if test x"$enable_static" = x"yes";then
   CFLAGS="$CFLAGS -static "
fi   

#debug
AC_MSG_CHECKING([use debug mode])
AC_ARG_ENABLE([debug],
	[AS_HELP_STRING([--enable-debug],[Enable debug data logging. Default: no])],
	[enable_debug="$enableval"],
	[enable_debug=no])
AC_MSG_RESULT([$enable_debug])
if test x"$enable_debug" = x"yes"; then
   AC_DEFINE([DEBUG],[],[Debug Mode: Will run verbose and optimization.])
   CFLAGS="$CFLAGS -g -O0 "
fi

AC_MSG_CHECKING([Provide Resource Usage])
AC_ARG_ENABLE([rusage],
	[AS_HELP_STRING([--enable-rusage],[Enable resource usage data logging. Default: yes])],
	[enable_rusage="$enableval"],
	[enable_rusage=yes])
AC_MSG_RESULT([$enable_rusage])
if test x"$enable_rusage" = x"yes"; then
   AC_DEFINE([USE_RUSAGE],[1],[rusage Mode: Will report resource usage.])
fi


AC_CONFIG_FILES([Makefile
                 RNAlib/H/Makefile
                 RNAlib/Makefile
                 man/Makefile
                 src/Makefile])
AC_OUTPUT
